# VirtualPointer

./: CMakeLists.txt  README.md  VirtualPointer.sln  VirtualPointer.vcxproj  build.bat
docs/: 集成文档.md
examples/: CMakeLists.txt  example_c.c  example_cpp.cpp  test_tool.cpp
include/: VPointerAdapter.h  VirtualPointerCAPI.h  VirtualPointerCAPI.hpp  VirtualPointerInterface.h
src/: VPointerAdapter.cpp  VirtualPointerCAPI.cpp  dllmain.cpp
